# DroneVision

./: CMakeLists.txt  README.md  main.cpp  main2.cpp  main4.cpp
docs/: folder_structure.md  library_overview.md  main_cpp_overview.md
lib/: camera.hpp  classnames.hpp  draw.hpp  infer.hpp  model_info.hpp  onnx_model.hpp  preprocess.hpp  print_shape.hpp  tensor_utils.hpp
models/: models.txt
services/: README.md  capture_service.cpp  inference_service.cpp
src/: camera.cpp  classnames.cpp  draw.cpp  infer.cpp  main.cpp  model_info.cpp  onnx_model.cpp  preprocess.cpp  print_shape.cpp
